src/test/deca/syntax/invalid/intermediaire2/printx/00printx.deca
{
    printx(01.FFFFFE0);
}